# vim: set noexpandtab:

2012-08-02 Steve
	* Changed met component terms to GeV
	* Tagging SusyCommon-00-00-27
	* Turned off jet-tau overlap which was affecting the bad jet cut
	* Tagging SusyCommon-00-00-28

2012-07-31 Steve
	* Updated to SUSYTools-00-01-03
	* Now using the SUSYTools cross section file
	* Added HforToolD3PD output for alpgen W and Z samples
	* Tagging SusyCommon-00-00-25
	* Oops, trying to access a trueTau branch on data
		* Fixed, but I need to retag
	* Tagging SusyCommon-00-00-26

2012-07-30 Steve
	* Added flag for toggling tau selection and OR (not just OR as before)
	* Modified photon flag to be similar in usage to tau flag
	* Add tau counters for cutflow (not yet used in the nLep cut, though)
	* Now saving the MET components: RefEle, RefMuon, RefJet, SoftJet, RefGamma, CellOutEflow
	* Tagging SusyCommon-00-00-24

2012-07-29 Steve
	* Added taus
		* Using new functions in the common code, e.g. get_taus_baseline
		* There's a switch for turning tau overlap removal off (for d3pd code)
		* Taus now counted in the event filtering
	* Tagging SusyCommon-00-00-23

2012-07-26 Steve
	* Added some simplified model mode A samples
		* Not all prio 0 samples are ready, will add more later
	* Updated submitSusy script

2012-07-22 Steve
	* Added protection for dcache errors that give empty files
	* Jobs will now abort if there are zero input entries
	* Tagging SusyCommon-00-00-22

2012-07-19 Steve
	* Updated samples
		* Adding Sherpa WW, Wbb, Wgamma, single top schan, 
	* Tagging SusyCommon-00-00-21

2012-07-16 Steve
	* Switched to using modifed version of cross section file in common code
	* Added additional cutflow counters and event checks to the SusyNtMaker so that one
	  can use it to produce a cutflow.
	  	* Does not change the filtering at all
	* Tagging SusyCommon-00-00-20

2012-07-14 Steve
	* Corrected usage of get_electrons_signal
		* Does not affect the SusyNt production, only d3pd cutflow

2012-07-12 Steve